// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleButton default 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        undefined,
        undefined,
        undefined,
        Object {},
      ]
    }
  >
    <TouchableWithoutFeedback
      onPressIn={[Function]}
      onPressOut={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#1652F0",
            "borderColor": "#1652F0",
            "borderRadius": 20,
            "borderWidth": 1,
            "flexDirection": "column",
            "height": 40,
            "justifyContent": "center",
            "textColor": "#FFFFFF",
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
            "width": 40,
          }
        }
      >
        <Text>
          🐛
        </Text>
      </View>
    </TouchableWithoutFeedback>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        undefined,
        undefined,
        undefined,
        Object {},
      ]
    }
  >
    <TouchableWithoutFeedback
      onPressIn={[Function]}
      onPressOut={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#F1F3F5",
            "borderRadius": 20,
            "borderWidth": 1,
            "flexDirection": "column",
            "height": 40,
            "justifyContent": "center",
            "textColor": "#1652F0",
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
            "width": 40,
          }
        }
      >
        <Text>
          🐛
        </Text>
      </View>
    </TouchableWithoutFeedback>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        undefined,
        undefined,
        undefined,
        Object {},
      ]
    }
  >
    <TouchableWithoutFeedback
      disabled={true}
      onPressIn={[Function]}
      onPressOut={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#1652F0",
            "borderColor": "#1652F0",
            "borderRadius": 20,
            "borderWidth": 1,
            "flexDirection": "column",
            "height": 40,
            "justifyContent": "center",
            "opacity": 0.5,
            "textColor": "#FFFFFF",
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
            "width": 40,
          }
        }
      >
        <Text>
          🐛
        </Text>
      </View>
    </TouchableWithoutFeedback>
  </View>,
]
`;

exports[`CircleButton positions 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        Object {
          "padding": 12,
        },
        undefined,
        undefined,
        Object {},
      ]
    }
  >
    <TouchableWithoutFeedback
      onPressIn={[Function]}
      onPressOut={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#1652F0",
            "borderColor": "#1652F0",
            "borderRadius": 20,
            "borderWidth": 1,
            "flexDirection": "column",
            "height": 40,
            "justifyContent": "center",
            "textColor": "#FFFFFF",
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
            "width": 40,
          }
        }
      >
        <Text>
          🐛
        </Text>
      </View>
    </TouchableWithoutFeedback>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        Object {
          "padding": 8,
        },
        Object {
          "bottom": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        Object {},
      ]
    }
  >
    <TouchableWithoutFeedback
      onPressIn={[Function]}
      onPressOut={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#1652F0",
            "borderColor": "#1652F0",
            "borderRadius": 20,
            "borderWidth": 1,
            "flexDirection": "column",
            "height": 40,
            "justifyContent": "center",
            "textColor": "#FFFFFF",
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
            "width": 40,
          }
        }
      >
        <Text>
          🐛
        </Text>
      </View>
    </TouchableWithoutFeedback>
  </View>,
]
`;
